Fazendo aparecer os cactus

--- a/style.css
+++ b/style.css
@@ -27,3 +27,11 @@
   position: absolute;
   width: 60px;
 }
+
+.cactus {
+  background: #800000;
+  bottom: 0;
+  height: 60px;
+  position: absolute;
+  width: 60px;
+}
