--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@
   text-align: center;
 }
 
-.wrapper {
+/* .wrapper {
   margin: 0 auto;
   width: 40rem;
-}
+} */
 
 .dino {
   background: #008000;
