--- a/style.css
+++ b/style.css
@@ -4,8 +4,18 @@
   padding: 0;
 }
 
+@keyframes slide-right {
+  from {
+    background-position: 70000%;
+  }
+
+  to {
+    background-position: 0;
+  }
+}
+
 .body {
-  height: 100vh;
+  background: #fafafa;
 }
 
 .header {
@@ -15,13 +25,18 @@
   text-align: center;
 }
 
-/* .wrapper {
-  margin: 0 auto;
-  width: 40rem;
-} */
+.main {
+  animation: slide-right 600s infinite linear;
+  background-image: url(images/background.png);
+  background-repeat: repeat-x;
+  bottom: 0;
+  height: 200px;
+  position: absolute;
+  width: 100%;
+}
 
 .dino {
-  background: #008000;
+  background: url(images/dino.png);
   bottom: 0;
   height: 60px;
   position: absolute;
@@ -29,7 +44,7 @@
 }
 
 .cactus {
-  background: #800000;
+  background: url(images/cactus.png);
   bottom: 0;
   height: 60px;
   position: absolute;
