--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 * {
   box-sizing: border-box;
+  color: inherit;
+  font-family: Arial, Helvetica, sans-serif;
+  list-style: none;
   margin: 0;
+  outline: none;
   padding: 0;
+  text-decoration: none;
 }
 
 @keyframes slide-right {
@@ -19,7 +24,7 @@
 }
 
 .header {
-  background-color: #008000;
+  background-color: #808080;
   color: #fff;
   padding: 1rem;
   text-align: center;
@@ -29,7 +34,7 @@
   animation: slide-right 600s infinite linear;
   background-image: url(images/background.png);
   background-repeat: repeat-x;
-  bottom: 0;
+  bottom: 100px;
   height: 200px;
   position: absolute;
   width: 100%;
@@ -38,6 +43,7 @@
 .dino {
   background: url(images/dino.png);
   bottom: 0;
+  left: 100px;
   height: 60px;
   position: absolute;
   width: 60px;
@@ -49,4 +55,46 @@
   height: 60px;
   position: absolute;
   width: 60px;
+}
+
+.footer {
+  align-items: center;
+  background-color: #808080;
+  bottom: 0;
+  color: #fff;
+  display: flex;
+  font-size: .875;
+  height: 60px;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+}
+
+.social-list {
+  display: flex;
+  font-size: 1.75rem;
+  justify-content: center;
+  margin-left: 3rem;
+}
+
+.social-item:nth-child(2) {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.social-item:hover {
+  color:#21264d;
+}
+
+.game-over {
+  align-items: center;
+  background-color: #808080;
+  color: #fff;
+  display: flex;
+  font-size: 2rem;
+  font-weight: bold;
+  justify-content: center;
+  height: 100vh;
+  line-height: 200%;
+  text-align: center;
 }
